# AnimalDeCompagnieNoSu

./: .gitignore  README.md  skaffold.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
Adoption/: Adoption.csproj  Adoption.sln  AdoptionWebModule.cs  Architecture.drawio  Directory.Build.props  Directory.Packages.props  Dockerfile  Program.cs  Startup.cs  clean.sh  global.json  readme.md
AnimalApp/: AnimalApp.sln  readme.md
AnimalCenter/: .dockerignore  .env.temp  .env.template  Cargo.toml  Dockerfile  README.md  Shuttle.toml  cert.pem  key.pem
AnimalCenter/.AnimalCenter/: .env.template  Cargo.toml  Dockerfile  README.md
AnimalCenter/.AnimalCenter/entity/: Cargo.toml
AnimalCenter/.AnimalCenter/entity/src/: animaltypeentity.rs  fileentity.rs
AnimalCenter/.AnimalCenter/infrastruct/: Cargo.toml
AnimalCenter/.AnimalCenter/infrastruct/src/config/: config.rs
AnimalCenter/.AnimalCenter/infrastruct/src/context/: dbcontext.rs  mod.rs
AnimalCenter/.AnimalCenter/model/src/animal/: animalinsertmodel.rs  animalmodel.rs  animalupdatemodel.rs  mod.rs
AnimalCenter/.AnimalCenter/model/src/animaltype/: animaltypemodel.rs
AnimalCenter/.AnimalCenter/model/src/file/: filemodel.rs
AnimalCenter/.AnimalCenter/model/src/report/: mod.rs
AnimalCenter/.AnimalCenter/model/src/structmapper/: animalconvert.rs
AnimalCenter/.AnimalCenter/repository/src/: animalrepository.rs  reportrepository.rs
AnimalCenter/.AnimalCenter/serialize/src/: date_format.rs
AnimalCenter/.AnimalCenter/service/: Cargo.toml
AnimalCenter/.AnimalCenter/service/src/: animaleventservice.rs  animalservice.rs
AnimalCenter/.AnimalCenter/tool/: Cargo.toml
AnimalCenter/.AnimalCenter/tool/src/: lib.rs
AnimalCenter/.AnimalCenter/web/: Cargo.toml
AnimalCenter/.AnimalCenter/web/src/: telemetry.rs
AnimalCenter/.AnimalCenter/web/src/controller/: animaltype_controller.rs
AnimalCenter/.AnimalCenter/web/src/route/: route.rs  route_graphql.rs
AnimalCenter/entity/: Cargo.toml
AnimalCenter/entity/src/: animaeventlentity.rs  animalentity.rs  lib.rs  rescueentity.rs
AnimalCenter/infrastruct/: Cargo.toml
AnimalCenter/infrastruct/src/config/: config.rs  mod.rs
AnimalCenter/infrastruct/src/context/: dbcontext.rs  mqcontext.rs
AnimalCenter/model/: Cargo.toml
AnimalCenter/model/src/: lib.rs
AnimalCenter/model/src/animal/: animalsearchmodel.rs
AnimalCenter/model/src/animalevent/: animaleventmodel.rs  mod.rs
AnimalCenter/model/src/animaltype/: animaltypemodel.rs  mod.rs
AnimalCenter/model/src/file/: mod.rs  staticfilemodel.rs
AnimalCenter/model/src/report/: rescue_classification.rs
AnimalCenter/model/src/structmapper/: animaleventconvert.rs  animaltypeconvert.rs  fileconvert.rs  graphqlcovert.rs  mod.rs  report_convert.rs
AnimalCenter/repository/: Cargo.toml
AnimalCenter/repository/src/: animaleventrepository.rs  animalrepository.rs  animaltyperepository.rs  filerepository.rs  lib.rs  reportrepository.rs
AnimalCenter/serialize/: Cargo.toml
AnimalCenter/serialize/src/: date_format.rs  date_format_bson.rs  lib.rs  naive_date_format.rs  naive_date_format_bson.rs
AnimalCenter/service/: Cargo.toml
AnimalCenter/service/src/: animaleventservice.rs  animalservice.rs  animaltypeservice.rs  fileuploadservice.rs  lib.rs  staticfileservice.rs
AnimalCenter/src/: main.rs  route.rs  route_fake.rs  route_graphql.rs  telemetry.rs
AnimalCenter/src/animal/: animal.rs  get.rs  mod.rs  post.rs
AnimalCenter/src/config/: config.rs
AnimalCenter/src/controller/: animal_controller.rs  animaltype_controller.rs  fileupload_controller.rs  mod.rs  report_controller.rs  staticfile_controller.rs
AnimalCenter/src/entity/: animalentity.rs  animaltypeentity.rs  fileentity.rs  mod.rs  rescueentity.rs
AnimalCenter/src/graphql/: animal.rs  animalmodel.rs  mod.rs
AnimalCenter/src/infrastruct/: base64convert.rs  custom_error.rs  mod.rs
AnimalCenter/src/infrastruct/config/: config.rs
AnimalCenter/src/infrastruct/context/: dbcontext.rs  mod.rs  mqcontext.rs
AnimalCenter/src/infrastruct/serialize/: date_format.rs  date_format_bson.rs  mod.rs  naive_date_format.rs  naive_date_format_bson.rs
AnimalCenter/src/infrastruct/structmapper/: animalclearfakedatatodoc.rs  animalconvert.rs  animalentitytoanimalsearchresponse.rs  animalsearchrequesttodoc.rs  animaltypeconvert.rs  animalupdatetoentity.rs  fileconvert.rs  graphqlcovert.rs  mod.rs  report_convert.rs
AnimalCenter/src/model/: mod.rs
AnimalCenter/src/model/animal/: animalinsertmodel.rs  animalmodel.rs  animalsearchmodel.rs  animaltypemodel.rs  animalupdatemodel.rs  filemodel.rs  mod.rs
AnimalCenter/src/model/animaltype/: animaltypemodel.rs
AnimalCenter/src/model/file/: filemodel.rs  mod.rs  staticfilemodel.rs
AnimalCenter/src/model/report/: mod.rs  rescue_classification.rs  rescueh_classification.rs
AnimalCenter/src/repository/: animalrepository.rs  animaltyperepository.rs  filerepository.rs  mod.rs  reportrepository.rs
AnimalCenter/src/route/: mod.rs  route.rs  route_fake.rs
AnimalCenter/src/service/: animalservice.rs  animaltypeservice.rs  fileuploadservice.rs  mod.rs  reportservice.rs  staticfileservice.rs
AnimalCenter/src/viewmodel/animal/: animalviewmodel.rs  mod.rs
AnimalCenter/tool/: Cargo.toml
AnimalCenter/tool/src/: lib.rs
AnimalCenter/web/: Cargo.toml
AnimalCenter/web/src/: actix_config.rs  actix_support.rs  main.rs  shuttle_support.rs
AnimalCenter/web/src/controller/: animal_controller.rs  animalevent_controller.rs  animaltype_controller.rs  fileupload_controller.rs  mod.rs  report_controller.rs  staticfile_controller.rs
AnimalCenter/web/src/graphql/: animal.rs
AnimalCenter/web/src/observable/: logging.rs  metric_names.rs  middleware.rs  mod.rs  prometheus.rs
AnimalCenter/web/src/repository/: animalrepository.rs  animaltyperepository.rs  mod.rs
AnimalCenter/web/src/route/: crudroute.rs  mod.rs  route.rs  route_graphql.rs
AnimalCenter/web/src/service/: animalservice.rs  animaltypeservice.rs  fileuploadservice.rs  reportservice.rs
AnimalDeCompagnieNoSuBlazor/: AnimalDeCompagnieNoSuBlazor.csproj  (+8 more)
(+272 files in other folders)
