[package]
name = "infrastruct"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
serde = { version = "1.0.193", features = ["derive"] }
async_once = "0.2.1"
async-trait = "0.1.50"
lazy_static = "1.4.0"
config = "0.13.3"
lapin = "1.7.1"
tracing = "0.1.40"
tracing-futures = { version = "0.2.5", default-features = false }
cloudevents-sdk = "0.3.1"

tool = {path ="../tool"}

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = ["async-std-runtime"]