[package]
name = "model"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
chrono = "0.4.21"
validator = { version = "0.13.0", features = ["derive"] }
actix-web = { version = "3.3.2", default-features = false, features = ["compress"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
async-graphql= { version = "4.0.1", features = ["apollo_tracing"] }

serialize = {path= "../serialize" }
tool = {path= "../tool" }
entity = {path= "../entity" }