[package]
name = "repository"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
futures = "0.3.29"
tracing = "0.1.40"
tracing-futures = { version = "0.2.5", default-features = false }

entity = { path= "../entity" }
infrastruct = { path= "../infrastruct" }
model = { path= "../model" }
tool = {path= "../tool" }

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["async-std-runtime"]