[package]
name = "repository"
version = "0.2.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
mongodb = "3"

entity = { path = "../entity" }
infrastruct = { path = "../infrastruct" }
model = { path = "../model" }
tool = { path = "../tool" }
