[package]
name = "serialize"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.21"

tool = {path= "../tool" }
