[package]
name = "service"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rand = "0.8.3"
async-trait = "0.1.50"
tracing = "0.1"
tracing-futures = { version = "0.2.5", default-features = false }
async-std = "1.12.0"
serde_json = "1.0.108"
cloudevents-sdk = "0.3.1"

tool = {path= "../tool" }
entity = {path= "../entity" }
model = {path= "../model" }
infrastruct = {path= "../infrastruct" }
repository = {path= "../repository"}