[package]
name = "service"
version = "0.2.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
rand = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2.5"
async-std = "1"
serde_json = "1"
cloudevents-sdk = "0.9"

tool = { path = "../tool" }
entity = { path = "../entity" }
model = { path = "../model" }
infrastruct = { path = "../infrastruct" }
repository = { path = "../repository" }
