[package]
name = "tool"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
actix-web = { version = "3.3.2", default-features = false, features = ["compress"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.13.0", features = ["derive"] }
lapin = "1.7.1"
rustc-serialize = "0.3.24" 
config = "0.13.3"


[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = ["async-std-runtime"]