[package]
name = "tool"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
bson = { version = "2.10.0", features = ["chrono-0_4"] }
actix-web = { version = "3.3.3", default-features = false, features = ["compress"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
validator = { version = "0.13.0", features = ["derive"] }
lapin = "1.10.0"
rustc-serialize = "0.3.25" 
config = "0.14.0"


[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]
