[package]
name = "animal_center"
version = "0.2.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
futures = "0.3"
sanitize-filename = "0.5"
dotenv = "0.15"

tool = {path= "../tool" }
serialize = {path= "../serialize" }
entity = {path= "../entity" }
infrastruct = {path= "../infrastruct" }
model = {path= "../model" }
repository = {path= "../repository" }
service = {path= "../service" }
