[package]
name = "animal_center"
version = "0.2.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2021"

[features]
default = []
actix = []

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
shuttle-actix-web = "0.49"
shuttle-runtime = "0.49"
futures = "0.3"
sanitize-filename = "0.6"
dotenv = "0.15"
async-graphql = { version = "7", features = ["apollo_tracing"] }
async-graphql-actix-web = "7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"

metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
opentelemetry = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = [
    "rt-tokio-current-thread",
] }
opentelemetry-otlp = { version = "0.27.0", features = ["tls-roots"] }
tonic = "0.12.3"
tracing-actix-web = { version = "0.7.15", features = [
    "opentelemetry_0_23",
    "uuid_v7",
] }
tracing-opentelemetry = "0.28.0"
tracing-bunyan-formatter = "0.3.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

tool = { path = "../tool" }
serialize = { path = "../serialize" }
entity = { path = "../entity" }
infrastruct = { path = "../infrastruct" }
model = { path = "../model" }
repository = { path = "../repository" }
service = { path = "../service" }
