[package]
name = "entity"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
chrono = "0.4.38"
# bson = "2.6.1"
bson = { version = "2.10.0", features = ["chrono-0_4"] }
serialize = {path= "../serialize" }
tool = {path= "../tool" }
